# paratan

./: .gitignore  Dockerfile  README.md  cli.py  environment.yml  geometry.xml  geometry_lib.py  gitignore  material.py  materials.xml  model.xml  model_constructor.py  modular_construction.py  modular_tandem_constructor.py  parametric_input.py  parametric_input.yaml  settings.xml  simple_mirror_model_constructor.py  source_information.yaml  source_lib.py  statepoint.1.h5  statepoint.3.h5  statepoint.5.h5  summary.h5  tallies.xml  tallies_lib.py  tandem_geometry.py  tandem_mirror_model_constructor.py  tandem_tallies.py  test_vv_builder.py  try_yaml.py
function_libraries/: tallies_lib.py  tandem_tallies_lib.py
hitarthNWLexample/: Anvil2Dsourcesheet1.csv  binCylSurfSource1D.py  bohmPrepare.py  extractSurfSourceCoord.py  geometry.xml  materials.xml  nwlnotes.txt  plotnwlVSaxialposition11.gp  runNWLmirror11void.py  tallies.xml  testCountsBinnedRadius.txt
input_files/: parametric_input.yaml  simple_parametric_input.yaml  (+3 more)
paratan2/: .gitignore  app.py  gui.py  pyproject.toml  trial.py  trial_build.py
paratan2/src/paratan2/: runner.py
paratan2/src/paratan2/config/: models.py
paratan2/src/paratan2/geometry/: core.py
paratan2/src/paratan2/materials/: material.py
paratan2/src/paratan2/models/: context.py  registry.py  simple_machine_builder.py
paratan2/src/paratan2/models/components/: base.py  central_cell.py  end_cell.py  hf_coil.py  lf_coil.py  vacuum_vessel.py
paratan2/src/paratan2/source/: volumetric.py
paratan2/src/paratan2/tallies/: base.py  builder.py
(+22 files in other folders)
